// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";
package code_metadata_internal_proto;
option go_package = "android/soong/testing/code_metadata_internal_proto";

message CodeMetadataInternal {

  message TargetOwnership {
    // REQUIRED: Name of the build target
    optional string target_name = 1;

    // REQUIRED: Code location of the target.
    // To be used to support legacy/backup systems that use OWNERS file and is
    // also required for our dashboard to support per code location basis UI
    optional string path = 2;

    // REQUIRED: Team ID of the team that owns this target.
    optional string trendy_team_id = 3;

    // OPTIONAL: The src files of the target.
    // To be used to determine ownership of a file for ownership
    repeated string source_files = 4;

    // OPTIONAL: Specify if multiple ownerships of the source files are allowed.
    optional bool multi_ownership = 5;
  }

  // List of all code targets and their metadata.
  repeated TargetOwnership target_ownership_list = 1;
}
